--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "latest",
     "handlebars": "latest",
+    "handlebars": "latest",
     "express3-handlebars": "latest",
     "mongoose": "latest",
     "connect-mongo": "latest",
