Initial work on billing and payments.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "notifier": "latest",
     "underscore": "latest",
     "async": "latest",
-    "forever": "latest"
+    "forever": "latest",
+    "paymill-node": "latest"
   },
   "devDependencies": {
     "supertest": "latest",
