--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-contrib-compass": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-nodemon": "latest",
-    "grunt-concurrent": "latest"
+    "grunt-concurrent": "latest",
+    "grunt-push-release": "~0.1.1"
   }
 }
